Fixes #1396 lists in article descriptions not visible

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -1,7 +1,7 @@
 $header-highlight-color: $even-lighter-gray;
 $header-nav-link-color-hover: $blue;
 
- ul {
+ .l-header ul {
   margin:0;
   padding:0;
   list-style: none;
